ManagerDash-Stats/userStatsPage.css
/* Created by Toby Tischler 09/02/2025 using code from statisticsContent.css */


/*--------------------- User Statistics CSS ---------------------*/
    
/* Grid container */
#mgrStatsUser-grid-container {
    display: flex;
    flex-direction: column;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 10px;
    width: 100%;
    height: 100%;
    margin: 0 auto;
}

#userStatsGraphs {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 10px;
}

#userStats-weeklyGraph {
    grid-area: graph;
    min-width: 48%;    height: 50dvh;
 
    background-color: #f5f5f5;
    padding: 30px;
}
#userStats-buttons {
    grid-area: buttons;
}
#userStats-ganttChart{
    display: flex;
    align-content: center;
    align-items: center;
    grid-area: ganttChart;
    min-width: 48%;
    height: 50dvh;

    background-color: #f5f5f5;
    padding: 30px;
}

#userStTaskDialChartBox {
    position: relative;
}

#userStats-allTasksFilters {
    grid-area: filters
}
#userStats-allTasksUser {
    grid-area: table2;
    align-self: center;
    justify-self: center;
    overflow-y: auto;
    overflow-x: auto;
    height: 20rem;}

.mgrStatsUser-grid-item {
    color: #333;
    background-color: white;
    border-radius: 30px;
    padding: 20px;
}

/* flexbox for buttons at top of page (change PWD, promote) */
#userStatsFlexTitle {
    display: flex;
    flex-direction: row;
    gap: 10px;
    text-wrap-mode: nowrap;
}
/* Flex Box for top half of User Stats */
#userStats-Flex-Item1 {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height:100%;
    width: 100%;
}

.userStatsChartContainer {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%;
    margin-top: 2rem;
}


/* graph */


#userStats-weekHrsContainer{
    display: flex;
    flex-grow: 1;
    align-self: center;
    overflow-x: auto;
    overflow-y: hidden;
    padding-top: 0.5rem;
}




/* Graph styles for dropdown */
#mdContributionSortButton select option {
    font-weight: 600 !important;
}


#userStats-graphChangeButton {
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid #F5F5F5;
    background-color: white;
    border-radius: 30px;
    padding: 0.2rem 0.4rem;
    transition: all 0.4s ease;
}

#userStats-graphChangeButton:hover {
    background-color: #F5F5F5;
}

#userStats-graphChangeButton:hover select {
    background-color: #F5F5F5;
}

#userStats-graphChangeButton select {
    width: 100%;
    margin-left: 10px;
    box-shadow: none;
    outline: none;
    border-radius: 30px;
    border: none;
    appearance: none; 
    -webkit-appearance: none;
    -moz-appearance: none;
    cursor: pointer;
    height: 40px;
    background-color: white;
    transition: all 0.4s ease;
}

#userStats-weekHrsContainer{
    display: block;
}

#userStats-overlapContainer {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}




#userStats-weekHrsContainerGraph{
    display: block;
}



#userStats-overlapContainerGraph {
    width: 100% !important;
    height: 65% !important;
    
}


/* Gantt Chart CSS */

  .chartMenu {
    width: 100vw;
    height: 40px;
    background: #1A1A1A;
    color: rgba(54, 162, 235, 1);
  }
  .chartMenu p {
    padding: 10px;
    font-size: 20px;
  }
  .chartCard {
    width: 100vw;
    height: calc(100vh - 40px);
    background: rgba(54, 162, 235, 0.2);
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .chartBox {
    width: 50%;
    padding: 20px;
    border-radius: 20px;
    border: solid 3px rgba(54, 162, 235, 1);
    background: white;
  }



  /* Dial for Task Status Graph */


  /* Task dial */
#userStTaskDialCell {
    position: relative;
    overflow-y: auto;
    /* width: 50%; */
}

#userStTaskDialPercentage {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -55%)
}

#userStTaskDialBox {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 50%;
    margin-top: 2rem;
}

#userStTaskDialLegend {
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-top: 1rem;
}

.userStTaskDialLegendItem {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.userStTaskDialLegendItem p {
    font-size: small;
}

.userStTaskDialLegendCounter {
    display: flex;
    align-items: center;
    justify-content: space-between;
} 

.userStTaskDialLegendCounter h3 {
    margin-left: 0.2rem;
}

.userStG{
    color: var(--green);
}

.userStY{
    color: var(--orange);
}

.userStGray{
    color: var(--medium-gray);
}





#mgrStatsUser-grid-container button, #mgrStatsUser-grid-container input {
    border: none;
    outline: none;
    border-radius: var(--line-border-radius);
    cursor: pointer;
    min-height: fit-content;
    min-width: fit-content;
    width: fit-content;
    transition: 0.5s color ease, 0.5s background-color ease;
    padding: 10px;
}

.userStats-type-btns {
    background-color: var(--secondary-colour);
    white-space: nowrap;
    border-radius: var(--line-border-radius);
    display: flex;
    align-items: center;
    justify-content: center;
}

.userStats-type-btns button {
    border-radius: 0px;
}

.userStats-type-btns button:first-child {
    border-top-left-radius: var(--line-border-radius);
    border-bottom-left-radius: var(--line-border-radius);
}

.userStats-type-btns button:last-child {
    border-top-right-radius: var(--line-border-radius);
    border-bottom-right-radius: var(--line-border-radius);
}

.userStats-type-btns button {
    background-color: transparent;
    color: var(--primary-colour);
}

.userStats-type-btns button:hover {
    background-color: #9A9A9A;
}

.userStats-type-btns button.active {
    background-color: var(--primary-colour);
    color: var(--bg-colour);
}


















/*modal body*/
.modal .modal-body {
    padding: 0.2rem 2rem 4rem 2rem;
}

label {
    margin-bottom: 0.2rem;
}


/* Filters */

.filter-applied-container {
    display: flex;
    align-items: baseline;
    justify-content: flex-start;
    gap: 12px;
}

.filter-applied-msg {
    display: none;
    margin-top: 13px;
    margin-left: 40px;
}

.remove-filters-btn {
    background-color: #f5f5f5;
    color: rgb(93, 93, 93);
    padding: 0.2rem 0.4rem;
    border-radius: 5px;
    display: none;
    align-items: center;
    justify-content: center;
}

